Projeto concluído com responsividade

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                 <div class="apresentação__formação"> 
                     <div class="formação__cursos">
                         <ul class="formação__lista">
-                            <li class="formação__instituição-faculdade"><img src="img/FAM.jpg"> </li>
+                            <li class="formação__instituição-faculdade"><img src="img/fam-960x640-removebg-preview (1).png"> </li>
                             <li class="formação__nome"><h4>Análise e Desenvolvimento de Sistemas</h4></li> 
                             <li class="formação__período"><p>Em andamento - Fam</p></li>
                         </ul> 
                     <div class="formação__cursos">
                         <ul class="formação__lista">
-                            <li class="formação__instituição"><img src="img/Alura.svg"> </li>
+                            <li class="formação__instituição"><img src="img/alura-removebg-preview.png"> </li>
                             <li class="formação__nome"><h4>Formação Programação & Front-End</h4></li> 
                             <li class="formação__período"><p>Em andamento - Alura</p></li>
                         </ul> 
